Fix facet wrapping

--- a/app/assets/stylesheets/avalon.css.scss
+++ b/app/assets/stylesheets/avalon.css.scss
@@ -550,8 +550,36 @@ a[data-trigger='submit'] {
 }
 
 .facet-values {
-  word-break: normal;
-  font-size: 1em;
+  //set hyphen definitions at this (display:block) level
+  word-break: keep-all;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -o-hyphens: auto;
+  hyphens: auto;
+  word-wrap: break-word;
+  white-space: pre-line;
+}
+
+.facet-values .facet-label {
+  //override any blacklight hyphen definitions made at this (display:inline) level
+  word-break: inherit;
+  -webkit-hyphens: inherit;
+  -moz-hyphens: inherit;
+  -ms-hyphens: inherit;
+  -o-hyphens: inherit;
+  hyphens: inherit;
+  //for IE to correctly wrap long words, container must have fixed width
+  display: block;
+  @media (max-width: 600px) {
+    max-width: 250px;
+  }
+  @media (min-width: 600px) and (max-width: $screen-sm-min){
+    max-width: 550px;
+  }
+  @media (min-width: $screen-sm-min){
+    max-width: 159px;
+  }
 }
 .facets .panel-group .panel {
   margin-top: 0px;
